style changes, moved pictures, added my picture

--- a/index.html
+++ b/index.html
@@ -30,27 +30,31 @@
                     into a new industry to build a better life for myself and 
                     my future family, previously having experience in the food 
                     industry I picked up on being able to hustle and get work 
-                    done in a timely manner. That experience translted well 
+                    done in a timely manner, as well as getting experience working with customers. That experience translted well 
                     for me when I moved into working production in factory 
-                    jobs, there I was able to work my way up into 
-                    higher positions. I moved up in the industry to end up 
-                    as a process technician where i would have to solve 
-                    how to get material to fill out and make a new part 
-                    for future runs, solving how to make production parts 
-                    meet the standards of our customers.
+                    jobs, starting from an operator position I quickly moved my
+                    way up to being material handler, a mold setter, to being 
+                    a process technician where I am now. As a process technician I
+                    have to solve how to get material to fill out our molds to make a 
+                    new part that meets the customer standards.
+
+                    <br>
+                    I am recently married and we currently have 2 cats named Penelope and Melon.
+                    <br>
+                    <div class="cats">
+                    <div class="melon">
+                    Melon
+                    <img src="./images/Melon leg.jpg" id="catleg">
+                    </div>
+                    <div class="penny">
+                    Penelope
+                    <img src="./images/Penny snowball.jpg" id="catleg">
+                    </div>
+                </div>
                 </p>
             </article>
             <article class="main-articles">
                 <h1>Why I got into coding: </h1>
-                <strong><small>This is not a picture of me or anything yet, 
-                    it is currently a cat. I am not a cat.
-                </small></strong>
-                <figure>
-                    <br>
-                    <img src="./images/Melon leg.jpg" id="catleg">
-                    <figcaption> Placeholder with my cat</figcaption>
-                    <br>
-                </figure>
                 <p>I have always had an interest in learning how to start
                     coding as I have always been using computers often for my
                     entire life, but every time I got interested I would begin 
@@ -136,21 +140,20 @@
         </div>
         <div id="side">
             <article class="side-articles" id="profile">
-                <img id="profile-image" src="./images/Penny Snowball.jpg">
+                <img id="profile-image" src="./images/IMG_5528.jpg">
                 <div id="profile-details">
                     <h2>Jake Mandeville</h2>
                     <ul>
                         <li>Washington, Mi 48094</li>
                         <li>(586) 612-1826</li>
                         <li><a href="mailto:JMandeville@protonmail.com">JMandeville@Protonmail.com</a></li>
+                        <li><a href="https://www.linkedin.com/in/jake-mandeville-06a341289/" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
                     </ul>
                 </div>
             </article>
             <article class="side-articles">
                 <h1>Interests</h1>
-                    <strong><small>There is a wide variety
-                        of hobbies I have:
-                    </small></strong>
+                    <strong>Some of my hobbies include:</strong>
                     <dl>
                         <dt><strong>Gaming</strong></dt>
                         <dd>Gaming is probably my biggest hobby, 
@@ -164,24 +167,6 @@
                         </dd>
                     </UL>
             </article>
-            <article class="side-articles">
-                <h1>Contact Me</h1>
-                <strong><small> Please Contact me with Work opportunities at:</small></strong>
-                <br>
-                <form action="/submit-form" method="POST">
-                    <label for="name"><strong>Name:</strong></label>
-                    <br>
-                    <input type="text" id="name" placeholder="Your name here">
-                    <br>
-                    <label for="your email"><strong>Email address:</strong></label>
-                    <input type="email" id="email" name="email" Placeholder="example@example.com">
-                    <br>
-                    <label for="body"><Strong>Message:</Strong></label>
-                    <br>
-                    <textarea id="body" placeholder="Your Message Here"></textarea><br>
-                    <input type="submit" id="sendmessage" value="Send Message">
-                </form><br>
-           </article>
         </div>
     </main>
     <footer>
