--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jake's Portfolio</title>
-    <link rel="stylesheet" href="css/alt.css">
+    <link rel="stylesheet" href="./CSS/alt.css">
 </head>
 <body>
     <nav>
