--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="hero-image">
         <div class="hero-text">
             <h1 style="font-size: 50px;">Jake Mandeville</h1>
-            <p>Python Programmer</p>
+            <p>Software Engineer</p>
         </div>
     </div>
 
