added pokemon app

--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,19 @@
     <main>
         <div id="alt">
             <article class="main-articles">
-                <h1>My Projects</h1>
-                <strong><small>Page to be filled with programming projects done by me</small></strong><br>
-                <iframe src="index.html" width="95%" height="750" title="portfolio site">
+                <h1>My Projects</h1><br>
+                <strong>Weather Application:</strong>
+                <p>A basic weather application that allows for a user to search
+                for a city or zip code and returns the weather for that area,
+                set up to pull the weather information from a random location
+                based on latitude and longitude, runs through github pages.</p>
+                <iframe src="https://jmandy96.github.io/week7_project/" width="95%" height="700" title="Weather App"></iframe><br>
+                <strong>Pokemon Application:</strong>
+                <p>A pokedex application that allows a user to search for
+                pokemon data and then store them in a party with basic battle functionality implemented,
+                runs through render.com
+                </p>
+                <iframe src="https://jake-thieves-pokemon.onrender.com" width="95%" height="700" title="portfolio site"></iframe>
             </article>
         </div>
     </main>
