--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                 for a city or zip code and returns the weather for that area,
                 set up to pull the weather information from a random location
                 based on latitude and longitude, runs through github pages.</p>
-                <iframe src="https://jmandy96.github.io/week7_project/" width="95%" height="700" title="Weather App"></iframe><br>
+                <iframe src="https://jmandy96.github.io/Weather_app/" width="95%" height="700" title="Weather App"></iframe><br>
                 <strong>Pokemon Application:</strong>
                 <p>A pokedex application that allows a user to search for
                 pokemon data and then store them in a party with basic battle functionality implemented,
