--- a/projects.html
+++ b/projects.html
@@ -17,18 +17,20 @@
         <div id="alt">
             <article class="main-articles">
                 <h1>My Projects</h1><br>
+                
                 <strong>Weather Application:</strong>
                 <p>A basic weather application that allows for a user to search
                 for a city or zip code and returns the weather for that area,
                 set up to pull the weather information from a random location
                 based on latitude and longitude, runs through github pages.</p>
                 <iframe src="https://jmandy96.github.io/Weather_app/" width="95%" height="700" title="Weather App"></iframe><br>
-                <strong>Pokemon Application:</strong>
+                <strong>Pokemon Application:</strong><br>
                 <p>A pokedex application that allows a user to search for
                 pokemon data and then store them in a party with basic battle functionality implemented,
                 runs through render.com
                 </p>
                 <iframe src="https://jake-thieves-pokemon.onrender.com" width="95%" height="700" title="portfolio site"></iframe>
+                <Strong style="color:blue">Current project: Fullstack online store that will be a live website.</Strong><br>
             </article>
         </div>
     </main>
