changed my picture

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div id="side">
             <article class="side-articles" id="profile">
-                <img id="profile-image" src="./images/IMG_5528.jpg">
+                <img id="profile-image" src=".//images/PXL_20231103_143211594.jpg">
                 <div id="profile-details">
                     <h2>Jake Mandeville</h2>
                     <ul>
