--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                 pokemon data and then store them in a party with basic battle functionality implemented,
                 runs through render.com
                 </p>
-                <iframe src="https://jake-thieves-pokemon.onrender.com" width="95%" height="700" title="portfolio site"></iframe>
+                <iframe src="https://jake-thieves-pokemon.onrender.com" width="95%" height="700" title="portfolio site"></iframe><br>
                 <Strong style="color:blue">Current project: Fullstack online store that will be a live website.</Strong><br>
             </article>
         </div>
