--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,12 @@
         <div id="alt">
             <article class="main-articles">
                 <h1>My Projects</h1><br>
-                
-                <strong>Weather Application:</strong>
+                <strong>PROTOTYPE, Ecommerce store:</strong><br>
+                <p>This is just a prototype version of an Ecommerce store I am 
+                    building for my wife, just to test out functionality before
+                    doing the full set up.</p>
+                <iframe src="https://sarastore.netlify.app/products" width="95%" height="700" title="Sara's store"></iframe><br>
+                <strong>Weather Application:</strong><br>
                 <p>A basic weather application that allows for a user to search
                 for a city or zip code and returns the weather for that area,
                 set up to pull the weather information from a random location
