--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
                 <p>This is just a prototype version of an Ecommerce store I am 
                     building for my wife, just to test out functionality before
                     doing the full set up.</p>
-                <iframe src="https://sarastore.netlify.app/products" width="95%" height="700" title="Sara's store"></iframe><br>
+                <iframe src="https://sarastore.netlify.app/" width="95%" height="700" title="Sara's store"></iframe><br>
                 <strong>Weather Application:</strong><br>
                 <p>A basic weather application that allows for a user to search
                 for a city or zip code and returns the weather for that area,
