--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,13 @@
         <div id="alt">
             <article class="main-articles">
                 <h1>My Projects</h1><br>
+                <a href="https://sara-storefront.vercel.app/" target="_blank" rel="noopener noreferrer"><strong>Ecommerce Store:</strong></a>
+                <p>
+                    Website my wife's E-commerce store, runs on next.js, using 
+                    tailwind for styling along with shadcn ui components. Pulls
+                    data from a MySQL database with planetscale.
+                </p>
+                <iframe src="https://sara-storefront.vercel.app/" width="95%" height="700" title="Finished Store"></iframe><br>
                 <strong>PROTOTYPE, Ecommerce store:</strong><br>
                 <p>This is just a prototype version of an Ecommerce store I am 
                     building for my wife, just to test out functionality before
@@ -28,13 +35,7 @@
                 set up to pull the weather information from a random location
                 based on latitude and longitude, runs through github pages.</p>
                 <iframe src="https://jmandy96.github.io/Weather_app/" width="95%" height="700" title="Weather App"></iframe><br>
-                <strong>Pokemon Application:</strong><br>
-                <p>A pokedex application that allows a user to search for
-                pokemon data and then store them in a party with basic battle functionality implemented,
-                runs through render.com
-                </p>
-                <iframe src="https://jake-thieves-pokemon.onrender.com" width="95%" height="700" title="portfolio site"></iframe><br>
-                <Strong style="color:blue">Current project: Fullstack online store that will be a live website.</Strong><br>
+
             </article>
         </div>
     </main>
